--- a/public/index.html
+++ b/public/index.html
@@ -40,5 +40,6 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <div>Hello!</div>
+    <div>Hello!</div>
   </body>
 </html>
